[metadata]
name = safe_environ
version = 0.1.0

description = Safely integrate environment variables.
url = https://github.com/JoelLefkowitz/safe-environ

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

keywords = 
    environ
    environment

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[portfolio]
project_type = Pypi package
status = Stable
homepage = https://safe-environ.readthedocs.io

languages = 
    Python

paradigms = 
    Object oriented programming

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    